--- a/index.css
+++ b/index.css
@@ -7,4 +7,6 @@ div.header {
     background-image: url(header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    color: antiquewhite;
+    font-family: sans-serif;
 }
